[gd_scene load_steps=4 format=3 uid="uid://cv6s23a2i6h24"]

[ext_resource type="Theme" uid="uid://do1cp7svnpb6c" path="res://themes/new_theme.tres" id="1_xkrjh"]
[ext_resource type="Script" path="res://src/gui/Menu.gd" id="2_f7whm"]
[ext_resource type="Texture2D" uid="uid://ci1jl0r8o0od0" path="res://icon.svg" id="3_8igj6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_xkrjh")
script = ExtResource("2_f7whm")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SumPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -105.0
offset_right = 150.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="VerticalItems" type="VBoxContainer" parent="SumPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -20.0
offset_right = 58.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GodotIcon" type="Sprite2D" parent="SumPanel/VerticalItems"]
position = Vector2(95, -121.5)
texture = ExtResource("3_8igj6")

[node name="BtnSum" type="Button" parent="SumPanel/VerticalItems"]
layout_mode = 2
text = "Sumar puntos"

[node name="ResultSlider" type="HSlider" parent="SumPanel/VerticalItems"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
editable = false
scrollable = false

[node name="Data" type="HFlowContainer" parent="SumPanel/VerticalItems"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Time" type="HBoxContainer" parent="SumPanel/VerticalItems/Data"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TimeText" type="Label" parent="SumPanel/VerticalItems/Data/Time"]
layout_mode = 2
text = "Tiempo: "

[node name="TimeNumber" type="Label" parent="SumPanel/VerticalItems/Data/Time"]
layout_mode = 2
text = "00"

[node name="Score" type="HBoxContainer" parent="SumPanel/VerticalItems/Data"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ScoreText" type="Label" parent="SumPanel/VerticalItems/Data/Score"]
layout_mode = 2
text = "Puntos: "

[node name="ScoreNumber" type="Label" parent="SumPanel/VerticalItems/Data/Score"]
layout_mode = 2
text = "00"

[node name="BtnSave" type="Button" parent="SumPanel/VerticalItems"]
layout_mode = 2
text = "Guardar"
